@@ -22,9 +22,20 @@
 
   <properties>
     <!-- build settings -->
-    <minimumMavenVersion>3.8.5</minimumMavenVersion>
-    <java.version>11</java.version>
+    <minimumMavenVersion>3.9.5</minimumMavenVersion>
+    <java.version>21</java.version>
     <java.maxVersion>21</java.maxVersion>
+    <!-- .mvn/jvm.config is not being used by surefire - we need to replicate the settings here! -->
+    <java.argLine>
+      -Djdk.net.URLClassPath.disableClassPathURLCheck=true
+      --add-opens=java.base/java.lang=ALL-UNNAMED
+      --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+      --add-opens=java.base/java.io=ALL-UNNAMED
+      --add-opens=java.base/java.util=ALL-UNNAMED
+      --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
+      --add-opens=jdk.compiler/com.sun.tools.javac=ALL-UNNAMED
+      --add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
+    </java.argLine>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
@@ -34,45 +45,46 @@
         by these BOMs (use the right versions):
 
         Main two Dropwizard BOMs:
-        https://github.com/dropwizard/dropwizard/blob/v4.0.8/dropwizard-bom/pom.xml
-        https://github.com/dropwizard/dropwizard/blob/v4.0.8/dropwizard-dependencies/pom.xml
+        https://github.com/dropwizard/dropwizard/blob/v5.0.0/dropwizard-bom/pom.xml
+        https://github.com/dropwizard/dropwizard/blob/v5.0.0/dropwizard-dependencies/pom.xml
 
         Which also imports the
-        Jersey BOM: https://github.com/eclipse-ee4j/jersey/blob/3.0.15/bom/pom.xml
-        Jackson BOM: https://github.com/FasterXML/jackson-bom/blob/jackson-bom-2.17.2/pom.xml
-        Jetty BOM: https://github.com/jetty/jetty.project/blob/jetty-11.0.23/jetty-bom/pom.xml
+        Jersey BOM: https://github.com/eclipse-ee4j/jersey/blob/3.1.11/bom/pom.xml
+        Jackson BOM: https://github.com/FasterXML/jackson-bom/blob/jackson-bom-2.20.0/pom.xml
+        Jetty BOM: https://github.com/jetty/jetty.project/blob/jetty-12.1.1/jetty-bom/pom.xml
 
         These BOMs manage dependency versions for many things including:
         commons-lang3, caffeine, guava, jersey, commons-text, servlet api, httpclient,
         liquibase, freemarker, jetty, jackson, metrics, etc.
     -->
-    <dropwizard.version>4.0.8</dropwizard.version>
+    <dropwizard.version>5.0.0</dropwizard.version>
 
-    <antlr.version>4.7.2</antlr.version>
+    <antlr.version>4.13.2</antlr.version>
     <assertj.version>3.11.1</assertj.version>
     <batik.version>1.18</batik.version>
-    <citeproc.version>3.0.0-alpha.6</citeproc.version>
-    <citeproc-styles.version>2.0.0</citeproc-styles.version>
+    <citeproc.version>3.3.0</citeproc.version> <!-- 3.4.0 has problems with parsing authors, see BibTexInserterTest -->
+    <citeproc-styles.version>25.11</citeproc-styles.version>
     <commons-collections4.version>4.3</commons-collections4.version>
     <commons-compress.version>1.27.1</commons-compress.version>
     <commons-io.version>2.17.0</commons-io.version>
     <commons-lang3.version>3.17.0</commons-lang3.version><!-- 3.16 coming in through DW4.0.8 resulted in stuck tests in jenkins -->
     <chronicle.version>2.26ea47</chronicle.version>
-    <docker-client.version>3.6.0</docker-client.version><!--keep in sync with test containers -->
+    <docker-client.version>3.4.0</docker-client.version><!--keep in sync with test containers -->
     <dwc-api.version>2.1.4</dwc-api.version>
     <dwca-io.version>3.0.0</dwca-io.version>
     <elasticsearch.version>8.1.3</elasticsearch.version>
     <fastutil.version>8.5.15</fastutil.version>
-    <fory.version>0.12.3</fory.version>
+    <fory.version>0.13.2</fory.version>
     <gbif-api.version>2.1.3</gbif-api.version>
-    <hikaricp.version>6.3.0</hikaricp.version>
-    <icu4j.version>75.1</icu4j.version>
+    <hikaricp.version>7.0.2</hikaricp.version>
+    <icu4j.version>78.1</icu4j.version>
     <java-diff-utils.version>4.12</java-diff-utils.version>
-    <javers.version>7.6.2</javers.version>
+    <javers.version>7.9.0</javers.version>
     <jbibtex.version>1.0.20</jbibtex.version>
     <jjwt.version>0.12.6</jjwt.version>
-    <jsoup.version>1.19.1</jsoup.version>
-    <junit.version>5.11.2</junit.version>
+    <jsoup.version>1.21.2</jsoup.version>
+    <jspecify.version>1.0.0</jspecify.version>
+    <junit.version>5.13.4</junit.version>
     <kryo.version>5.6.2</kryo.version>
     <kryo-reflectasm.version>1.11.9</kryo-reflectasm.version>
     <lombok.version>1.18.30</lombok.version>
@@ -80,20 +92,18 @@
     <mockito.version>3.3.3</mockito.version>
     <mybatis.version>3.5.19</mybatis.version>
     <name-parser.version>3.14.0</name-parser.version>
-    <neo4j-algorithms.version>3.4.0.0</neo4j-algorithms.version>
-    <neo4j.version>3.4.17</neo4j.version>
     <newick-io.version>1.0.6</newick-io.version>
-    <poi.version>5.2.3</poi.version>
+    <poi.version>5.5.1</poi.version>
     <pollexor.version>3.0.0</pollexor.version>
-    <postgresql.version>42.7.6</postgresql.version>
-    <scribejava.version>8.3.1</scribejava.version>
+    <postgresql.version>42.7.8</postgresql.version>
+    <scribejava.version>8.3.3</scribejava.version>
     <simple-mail.version>8.12.6</simple-mail.version>
     <stax2.version>4.2.2</stax2.version>
     <testcontainers.version>2.0.2</testcontainers.version><!--keep in sync with docker client-->
     <text-tree.version>1.6.5</text-tree.version>
-    <tika.version>2.9.2</tika.version>
+    <tika.version>3.2.3</tika.version>
     <twelvemonkeys.version>3.12.0</twelvemonkeys.version>
-    <woodstox.version>6.6.2</woodstox.version>
+    <woodstox.version>7.1.1</woodstox.version>
     <imgscalr.version>4.2</imgscalr.version>
     <univocity-parsers.version>2.9.1</univocity-parsers.version>
 
@@ -102,7 +112,7 @@
     <exec-maven-plugin.version>3.4.1</exec-maven-plugin.version>
     <extra-enforcer-rules.version>1.11.0</extra-enforcer-rules.version>
     <maven-clean-plugin.version>3.4.0</maven-clean-plugin.version>
-    <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
+    <maven-compiler-plugin.version>3.14.1</maven-compiler-plugin.version>
     <maven-dependency-plugin.version>3.8.0</maven-dependency-plugin.version>
     <maven-deploy-plugin.version>3.1.4</maven-deploy-plugin.version>
     <maven-enforcer-plugin.version>3.5.0</maven-enforcer-plugin.version>
@@ -110,11 +120,10 @@
     <maven-graalvm-plugin.version>0.10.3</maven-graalvm-plugin.version>
     <maven-install-plugin.version>3.1.2</maven-install-plugin.version>
     <maven-jar-plugin.version>3.4.2</maven-jar-plugin.version>
-    <maven-release-plugin.version>3.1.1</maven-release-plugin.version>
     <maven-resources-plugin.version>3.3.1</maven-resources-plugin.version>
     <maven-shade-plugin.version>3.6.0</maven-shade-plugin.version>
     <maven-source-plugin.version>3.3.1</maven-source-plugin.version>
-    <maven-surefire-plugin.version>3.5.1</maven-surefire-plugin.version>
+    <maven-surefire-plugin.version>3.5.4</maven-surefire-plugin.version>
     <versions-maven-plugin.version>2.17.1</versions-maven-plugin.version>
 
     <gbif.api>https://api.gbif.org/v1/</gbif.api>
@@ -498,53 +507,6 @@
         <version>${mybatis.version}</version>
       </dependency>
 
-      <!-- neo4j -->
-      <dependency>
-        <groupId>org.neo4j</groupId>
-        <artifactId>neo4j</artifactId>
-        <version>${neo4j.version}</version>
-        <exclusions>
-          <exclusion>
-            <!-- turn off usage reporting to normalizer -->
-            <groupId>org.neo4j</groupId>
-            <artifactId>neo4j-udc</artifactId>
-          </exclusion>
-        </exclusions>
-      </dependency>
-      <dependency>
-        <groupId>org.neo4j</groupId>
-        <artifactId>neo4j-kernel</artifactId>
-        <version>${neo4j.version}</version>
-      </dependency>
-      <!-- somehow missing from neo4j-kernel deps on java 11: https://github.com/Sp2000/colplus-backend/issues/573 -->
-      <dependency>
-        <groupId>org.bouncycastle</groupId>
-        <artifactId>bcprov-jdk15on</artifactId>
-        <version>1.64</version>
-      </dependency>
-      <dependency>
-        <groupId>org.neo4j</groupId>
-        <artifactId>neo4j-cypher</artifactId>
-        <version>${neo4j.version}</version>
-        <exclusions>
-          <exclusion>
-            <!-- uses old ASM version and we dont use it anyways -->
-            <groupId>org.neo4j</groupId>
-            <artifactId>neo4j-codegen</artifactId>
-          </exclusion>
-        </exclusions>
-      </dependency>
-      <dependency>
-        <groupId>org.neo4j</groupId>
-        <artifactId>neo4j-slf4j</artifactId>
-        <version>${neo4j.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.neo4j</groupId>
-        <artifactId>graph-algorithms-algo</artifactId>
-        <version>${neo4j-algorithms.version}</version>
-      </dependency>
-
       <!-- mapdb & kryo -->
       <dependency>
         <groupId>org.mapdb</groupId>
@@ -610,11 +572,6 @@
         <artifactId>elasticsearch</artifactId>
         <version>${elasticsearch.version}</version>
       </dependency>
-      <dependency>
-        <groupId>org.apache.commons</groupId>
-        <artifactId>commons-lang3</artifactId>
-        <version>${commons-lang3.version}</version>
-      </dependency>
       <!-- unicode, transliterations
           Consider much simpler https://github.com/jirutka/unidecode
       -->
@@ -649,6 +606,11 @@
       </dependency>
 
       <!-- other -->
+      <dependency>
+        <groupId>org.jspecify</groupId>
+        <artifactId>jspecify</artifactId>
+        <version>${jspecify.version}</version>
+      </dependency>
       <dependency>
         <groupId>org.jsoup</groupId>
         <artifactId>jsoup</artifactId>
@@ -777,6 +739,12 @@
         <groupId>org.testcontainers</groupId>
         <artifactId>testcontainers-elasticsearch</artifactId>
         <version>${testcontainers.version}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.glassfish.expressly</groupId>
+        <artifactId>expressly</artifactId>
+        <version>5.0.0</version>
         <scope>test</scope>
       </dependency>
     </dependencies>
@@ -975,7 +943,6 @@
           <executions>
             <execution>
               <id>attach-sources</id>
-              <phase>verify</phase>
               <goals>
                 <goal>jar-no-fork</goal>
               </goals>
@@ -987,9 +954,7 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <version>${maven-surefire-plugin.version}</version>
           <configuration>
-            <!-- skips surefire tests without skipping failsafe tests.
-              Property value seems to magically default to false -->
-            <skipTests>${skip.surefire.tests}</skipTests>
+            <argLine>${java.argLine}</argLine>
             <!--
             Run tests in parallel with the same JVM by default for all modules.
             Some modules run tests that share static information and will override this configuration.
@@ -1032,9 +997,7 @@
             <!-- mem settings may not be necessary but the 3rd arg is. See here: -->
             <!-- https://issues.apache.org/jira/browse/SUREFIRE-1588 -->
             <!-- And here: https://talk.openmrs.org/t/error-could-not-find-or-load-main-class-org-apache-maven-surefire-booter-forkedbooter/20509 -->
-            <argLine>
-              -Djdk.net.URLClassPath.disableClassPathURLCheck=true
-            </argLine>
+            <argLine>${java.argLine}</argLine>
             <runOrder>random</runOrder>
             <includes>
               <include>**/*IT.java</include>
@@ -1045,19 +1008,6 @@
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>versions-maven-plugin</artifactId>
           <version>${versions-maven-plugin.version}</version>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-release-plugin</artifactId>
-          <version>${maven-release-plugin.version}</version>
-          <configuration>
-            <goals>deploy</goals>
-            <preparationGoals>install</preparationGoals>
-            <resume>false</resume>
-            <useReleaseProfile>true</useReleaseProfile>
-            <releaseProfiles>col-release</releaseProfiles>
-            <tagNameFormat>${project.artifactId}-@{project.version}</tagNameFormat>
-          </configuration>
         </plugin>
         <plugin>
           <groupId>org.graalvm.buildtools</groupId>
